--- a/treegrid-addon/pom.xml
+++ b/treegrid-addon/pom.xml
@@ -12,8 +12,10 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
-		<vaadin.version>7.6.8</vaadin.version>
-		<vaadin.plugin.version>${vaadin.version}</vaadin.plugin.version>
+		<!--<vaadin.version>7.6.8</vaadin.version>-->
+		<!--<vaadin.plugin.version>${vaadin.version}</vaadin.plugin.version>-->
+		<vaadin.version>7.7.0-SNAPSHOT</vaadin.version>
+		<vaadin.plugin.version>7.6.8</vaadin.plugin.version>
 
 		<!-- ZIP Manifest fields -->
 		<Implementation-Version>${project.version}</Implementation-Version>
