--- a/treegrid-addon/pom.xml
+++ b/treegrid-addon/pom.xml
@@ -130,6 +130,7 @@
 							<Vaadin-Package-Version>1</Vaadin-Package-Version>
 							<Vaadin-License-Title>${Vaadin-License-Title}</Vaadin-License-Title>
 							<Vaadin-Widgetsets>org.vaadin.treegrid.WidgetSet</Vaadin-Widgetsets>
+							<Vaadin-Stylesheets>VAADIN/addons/treegrid/treegrid.scss</Vaadin-Stylesheets>
 						</manifestEntries>
 					</archive>
 				</configuration>
