Ignore cached style file

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ treegrid-addon/*.iml
 treegrid-demo/target
 treegrid-demo/*.iml
 treegrid-demo/src/main/webapp/VAADIN/widgetsets/
+treegrid-demo/src/main/webapp/VAADIN/themes/demo/styles.scss.cache
