--- a/treegrid-demo/pom.xml
+++ b/treegrid-demo/pom.xml
@@ -12,8 +12,8 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
-		<vaadin.version>7.7.0-SNAPSHOT</vaadin.version>
-		<vaadin.plugin.version>7.7-SNAPSHOT</vaadin.plugin.version>
+		<vaadin.version>7.7.0</vaadin.version>
+		<vaadin.plugin.version>7.7.0</vaadin.plugin.version>
 		<jetty.plugin.version>9.2.3.v20140905</jetty.plugin.version>
 	</properties>
 
