--- a/treegrid-addon/pom.xml
+++ b/treegrid-addon/pom.xml
@@ -5,7 +5,7 @@
 	<groupId>org.vaadin</groupId>
 	<artifactId>treegrid</artifactId>
 	<packaging>jar</packaging>
-	<version>1.0-SNAPSHOT</version>
+	<version>1.0</version>
 	<name>TreeGrid Add-on</name>
 
 	<properties>
