--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<groupId>org.vaadin</groupId>
 	<artifactId>treegrid-root</artifactId>
 	<packaging>pom</packaging>
-	<version>0.7-SNAPSHOT</version>
+	<version>0.7.1</version>
 	<name>TreeGrid Add-on Root Project</name>
 
 	<modules>
