--- a/treegrid-addon/pom.xml
+++ b/treegrid-addon/pom.xml
@@ -5,7 +5,7 @@
 	<groupId>com.vaadin</groupId>
 	<artifactId>vaadin-treegrid</artifactId>
 	<packaging>jar</packaging>
-	<version>0.7-SNAPSHOT</version>
+	<version>0.7.2</version>
 	<name>Vaadin TreeGrid</name>
 
 	<properties>
